# Cell

./: .gitignore  CMakeLists.txt  Cell.emd  README.md
resource/src/: cell_plugin.xml
src/: common.hpp  main.cpp  main.hpp  utils.cpp  utils.hpp
